--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <span class="logotype">clebcraft</span>
       <div class="pull-right">
-        <button class="mapButton">view map</button>
+        <a href="map"><button class="mapButton">view map</button></a>
 
         <!-- <img src="http://mcapi.ca/query/clebcraft.eastus2.cloudapp.azure.com/icon"/> -->
       </div>
