--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="container">
         <span class="logotype">clebcraft</span>
       <div class="pull-right">
-	<a href="dynmap"><button class="mapButton">view dynmap</button></a>
-        <a href="map"><button class="mapButton">view map</button></a>
+        <a href="dynmap"><button class="mapButton">dynmap</button></a>
+        <a href="map"><button class="mapButton">map</button></a>
 
         <!-- <img src="http://mcapi.ca/query/clebcraft.eastus2.cloudapp.azure.com/icon"/> -->
       </div>
